ODAEU-222 Using complete list of channels instead of named list.

--- a/eudevfin/cdf-wrapper/src/main/resources/org/devgateway/eudevfin/reports/aq/aq_master_multilateral_org.jrxml
+++ b/eudevfin/cdf-wrapper/src/main/resources/org/devgateway/eudevfin/reports/aq/aq_master_multilateral_org.jrxml
@@ -8,7 +8,7 @@
 	<parameter name="SECOND_YEAR" class="java.lang.Number"/>
 	<queryString language="mdx">
 		<![CDATA[WITH
-MEMBER [Channel].[AllCodes] AS SUM({[Channel].[UNGroup], [Channel].[EUGroup], [Channel].[WBGroup], [Channel].[RBGroup], [Channel].[OtherGroup]})
+MEMBER [Channel].[AllCodes] AS SUM({[Channel].[Code].Members})
 MEMBER [Measures].[First Year] AS SUM(CrossJoin({[Reporting Year].[$P{FIRST_YEAR}]}, {[Measures].[Net Amount Currency NATLOECD]}))
 MEMBER [Measures].[Second Year] AS SUM(CrossJoin({[Reporting Year].[$P{SECOND_YEAR}]}, {[Measures].[Net Amount Currency NATLOECD]}))
 SELECT
