--- a/eudevfin/common-ui/src/main/resources/org/devgateway/eudevfin/ui/common/components/DateInputField.html
+++ b/eudevfin/common-ui/src/main/resources/org/devgateway/eudevfin/ui/common/components/DateInputField.html
@@ -14,6 +14,7 @@
 <body>
 <wicket:extend>
     <input wicket:id="field" type="text"/>
+	<a class="icon-remove" wicket:id="clearField"/>
 </wicket:extend>
 </body>
 </html>
