--- a/eudevfin/reports-ui/src/main/webapp/css/style.css
+++ b/eudevfin/reports-ui/src/main/webapp/css/style.css
@@ -8,7 +8,7 @@ img {
 	padding-left: 0px;
 }
 
-#oda-at-glance {
+#reports-page {
     background-color: #ffffff;
 }
 
@@ -134,6 +134,10 @@ td.formattedNumeric {
 	display: none;
 }
 
+tr.geography {
+    background-color: #DCDCDC;
+}
+
 tr.odd {
 	background-color: #f5f5f5;
 }
@@ -146,15 +150,15 @@ tr.even td.sorting_1 {
 	background-color: #fff;
 }
 
-td.column0{
+td.column0 {
 	border-right: 1px solid #ccc;
 }
 
-td.column1{
+td.column1 {
 	border-right: 1px solid #ccc;
 }
 
-div.box{
+div.box {
 	background-color: #fff;
 	border:0px;
 	height: auto;
@@ -186,7 +190,7 @@ div.box{
 	overflow: hidden;
 }
 
-.box-header h2{
+.box-header h2 {
 	font-size: 16px;
 	line-height: 16px;
 	float:left;
@@ -196,12 +200,12 @@ div.box{
 	text-shadow: 0px 1px 0px #fff;
 }
 
-.box-header h2 i{
+.box-header h2 i {
 	margin: 1px 3px 0px 5px;
 	opacity: .4;
 }
 
-.box-header .break{
+.box-header .break {
 	border-left: 1px solid #fcfcfc;
 	border-right: 1px solid #ddd;
 	margin: -12px 10px -10px 10px;
